...

          <Button
            onPress={handlePrimaryAction}
            theme={theme}
            style={styles.actionButton}
            contentStyle={styles.actionButtonContent}
            testID="landing-primary-action"
            >
              <DesignIcon
              name={isGranted ? 'scan' : 'check'}
              width={isDesignPhone ? 20 : 24}
              height={isDesignPhone ? 20 : 24}
              color={theme.buttonPrimaryText}
...
